Implemented User Login

--- a/Smack/Base.lproj/Main.storyboard
+++ b/Smack/Base.lproj/Main.storyboard
@@ -242,7 +242,7 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="6uv-ox-OL5">
                                 <rect key="frame" x="62.5" y="160" width="250" height="86"/>
                                 <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="h3l-9s-duL">
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="h3l-9s-duL" userLabel="Email Txt">
                                         <rect key="frame" x="0.0" y="0.0" width="250" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="250" id="h9U-rM-JcC"/>
@@ -294,13 +294,22 @@
                                         <real key="value" value="5"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="loginPressed:" destination="vYx-W7-M0O" eventType="touchUpInside" id="GJJ-Vs-O5W"/>
+                                </connections>
                             </button>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="tQs-iT-L9X">
+                                <rect key="frame" x="169" y="215" width="37" height="37"/>
+                                <color key="color" red="0.25882352939999997" green="0.3294117647" blue="0.72549019609999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="tQs-iT-L9X" firstAttribute="centerX" secondItem="dYh-KS-7BJ" secondAttribute="centerX" id="8Id-3O-0wf"/>
                             <constraint firstItem="iBT-zu-pAj" firstAttribute="top" secondItem="kXa-EH-UJc" secondAttribute="bottom" id="8kt-eQ-JXp"/>
                             <constraint firstItem="kXa-EH-UJc" firstAttribute="top" secondItem="6uv-ox-OL5" secondAttribute="bottom" constant="40" id="E3O-7y-cNG"/>
                             <constraint firstItem="6uv-ox-OL5" firstAttribute="top" secondItem="adK-kU-AkN" secondAttribute="bottom" constant="40" id="J7N-we-3eE"/>
+                            <constraint firstItem="tQs-iT-L9X" firstAttribute="centerY" secondItem="dYh-KS-7BJ" secondAttribute="centerY" constant="-100" id="K6W-Mh-2zA"/>
                             <constraint firstItem="6uv-ox-OL5" firstAttribute="centerX" secondItem="dYh-KS-7BJ" secondAttribute="centerX" id="O44-iQ-HAs"/>
                             <constraint firstItem="oz4-vN-1XZ" firstAttribute="top" secondItem="EuA-dM-oMi" secondAttribute="bottom" constant="8" id="V7U-vH-Jq4"/>
                             <constraint firstItem="iBT-zu-pAj" firstAttribute="centerX" secondItem="dYh-KS-7BJ" secondAttribute="centerX" id="X5S-Lh-s0z"/>
@@ -311,6 +320,9 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="emailTxt" destination="h3l-9s-duL" id="Rv1-Gv-WKE"/>
+                        <outlet property="passwordTxt" destination="poW-Oz-92i" id="RNy-uf-eaU"/>
+                        <outlet property="spinner" destination="tQs-iT-L9X" id="iKG-bE-sBV"/>
                         <segue destination="dzT-F8-gHd" kind="show" identifier="toCreateAccount" id="IZM-eF-fxI"/>
                     </connections>
                 </viewController>
